--- a/provisioning/roles/php/tasks/main.yml
+++ b/provisioning/roles/php/tasks/main.yml
@@ -1,14 +1,17 @@
+# EPELリポジトリインストール
 - name: install epel
   yum:
     name: epel-release
     update_cache: yes
     state: present
 
+# REMIリポジトリインストール
 - name: install remi
   yum:
     name: https://rpms.remirepo.net/enterprise/remi-release-7.rpm
     state: present
 
+# PHPインストール
 - name: install php
   yum:
     name: "{{ install_php.install_products }}"
