--- a/provisioning/roles/ruby/tasks/main.yml
+++ b/provisioning/roles/ruby/tasks/main.yml
@@ -23,7 +23,8 @@
     dest: /etc/profile.d/rbenv.sh
     owner: root
     group: root
-    mode: 0755 
+    mode: 0755
+    force: no
 
 # Rubyインストール
 - name: install ruby
