--- a/provisioning/roles/common/tasks/main.yml
+++ b/provisioning/roles/common/tasks/main.yml
@@ -13,3 +13,20 @@
 - name: set timezone
   timezone:
     name: Asia/Tokyo
+
+# NTPサーバ設定
+- name: upload chrony.conf
+  template:
+  src: chrony.conf
+  dest: /etc/chrony.conf
+  owner: root
+  group: root
+  mode: 0544
+  force: yes
+  backup: yes
+
+# chronyd再起動
+- name: restart chronyd
+  service:
+    name: chronyd
+    state: restarted
